attempting to fix enemie alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,7 +51,7 @@ padding-top: 0;
 img#enemie{
   height:267px;
   width: 192px;
-  margin-left: 40%;
+  margin-right: 40%;
   border-radius: 10px;
   background-size: contain;
   background-repeat: repeat;*/
